Fix release_notes variable for asdf workflow

--- a/.github/workflows/part_asdf_update.yml
+++ b/.github/workflows/part_asdf_update.yml
@@ -8,7 +8,7 @@ on:
         type: string
         default: ""
         required: false
-      release-notes:
+      release_notes:
         type: string
         required: true
 
