--- a/.github/workflows/part_asdf_update.yml
+++ b/.github/workflows/part_asdf_update.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: ASDF Setup
-        uses: asdf-vm/actions/setup
+        uses: asdf-vm/actions/plugins-add@1
       - name: Get Newest Version
         id: newestVersion
         run: |
