--- a/.github/workflows/part_asdf_update.yml
+++ b/.github/workflows/part_asdf_update.yml
@@ -37,6 +37,7 @@ jobs:
           MAJOR_VERSION=$(echo LATEST_VERSION | cut -d '.' -f 1,2)
           LATEST_VERSION_WITH_DASHES=$(echo LATEST_VERSION | tr . -)
           eval RELEASE_NOTES="${{ inputs.release_notes }}"
+          echo "Realese notes available in: $RELEASE_NOTES"
           echo "RELEASE_NOTES=${RELEASE_NOTES}" >> $GITHUB_ENV
       - name: "Try Installing new version"
         run: |
