--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,7 +1,7 @@
 on:
   schedule:
-    # Every 5 AM in the morning UTC
-    - cron: '0 5 * * * *'
+    # Every 5:30 AM in the morning UTC
+    - cron: '30 5 * * *'
   workflow_dispatch: {}
 
 name: "Every fifteen minutes"
