--- a/.github/workflows/part_asdf_update.yml
+++ b/.github/workflows/part_asdf_update.yml
@@ -4,11 +4,10 @@ on:
       plugin:
         type: string
         required: true
-      constraint:
-        type: string
-        default: ""
-        required: false
       release_notes:
+        type: string
+        required: true
+      docker_image:
         type: string
         required: true
 
@@ -31,13 +30,13 @@ jobs:
       - name: Get Newest Version
         id: newestVersion
         run: |
-          LATEST_VERSION=$(asdf latest "${{ inputs.plugin }}" "${{ inputs.constraint }}")
-          echo "Latest (${{ inputs.constraint }}): $LATEST_VERSION"
+          echo "CURRENT_VERSION=$(grep "^${{ inputs.plugin }}" .tool-versions | cut -d' ' -f2)" >> $GITHUB_ENV
+          LATEST_VERSION=$(asdf latest "${{ inputs.plugin }}")
+          echo "Updating from $CURRENT_VERSION to $LATEST_VERSION"
           echo "LATEST_VERSION=${LATEST_VERSION}" >> $GITHUB_ENV
-          MAJOR_VERSION=$(echo LATEST_VERSION | cut -d '.' -f 1,2)
-          LATEST_VERSION_WITH_DASHES=$(echo LATEST_VERSION | tr . -)
+          MAJOR_VERSION=$(echo $LATEST_VERSION | cut -d '.' -f 1,2)
+          LATEST_VERSION_WITH_DASHES=$(echo $LATEST_VERSION | tr . -)
           RELEASE_NOTES=$(eval echo "${{ inputs.release_notes }}")
-          echo "Realese notes available in: $RELEASE_NOTES"
           echo "RELEASE_NOTES=${RELEASE_NOTES}" >> $GITHUB_ENV
       - name: "Try Installing new version"
         run: |
@@ -45,11 +44,14 @@ jobs:
       - name: Apply latest version to .tool-versions
         run: |
           asdf local "${{ inputs.plugin }}" "${{ env.LATEST_VERSION }}"
+      - name: Update latest version to Dockerfile too 
+        run: |
+          sed -i "s/^FROM ${{ inputs.docker_image }}:${{ env.CURRENT_VERSION }}/FROM ${{ inputs.docker_image }}:${{ env.LATEST_VERSION }}/" Dockerfile
       - uses: peter-evans/create-pull-request@v4
         with:
           add-paths: '.tool-versions'
-          commit-message: 'Update ${{ inputs.plugin }} to ${{ env.LATEST_VERSION }}'
-          title: 'Update ${{ inputs.plugin }} to ${{ env.LATEST_VERSION }}'
+          commit-message: 'Update ${{ inputs.plugin }} from ${{ env.CURRENT_VERSION }} to ${{ env.LATEST_VERSION }}'
+          title: 'Update ${{ inputs.plugin }} from ${{ env.CURRENT_VERSION }} to ${{ env.LATEST_VERSION }}'
           branch: 'update/${{ inputs.plugin }}/${{ env.LATEST_VERSION }}'
           body: 'See release notes in: ${{ env.RELEASE_NOTES }}'
           delete-branch: true
