--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: swappiehq/github-actions/update-python@main
         with:
-          version: major-updates
+          version: patch
   UpdatesAsdfNode:
     name: "Update asdf NodeJS"
     permissions:
@@ -26,4 +26,4 @@ jobs:
     steps:
       - uses: swappiehq/github-actions/update-nodejs@main
         with:
-          version: minor-updates
+          version: minor
